# pygame-typing-speed-test

./: .gitignore  README.md  pyproject.toml
pygame_typing_speed_test/: main.py
